fix align-items flex-start

--- a/styles/utils.module.css
+++ b/styles/utils.module.css
@@ -183,7 +183,7 @@
   gap: 30px;
   /* flex-direction: row; */
   flex-flow: row wrap;
-  align-items: center;
+  align-items: flex-start;
   justify-content: flex-start;
 }
 .posts img {
